--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 
 </footer>
 
-<div clas=" footer_white">© 2017 Morphy Richards India | Powered by ibs</div>
+<div class="footer_white"> © 2017 Morphy Richards India | Powered by ibs</div>
 
 <script>
 var slideIndex = 0;
